# noteplus

./: CMakeLists.txt  CMakelists.txt  README.md
src/: main.cpp
src/gui/: gui.cpp  gui.h
